<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.InterFourth">


    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@color/green"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/fsc"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_Spiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@color/green"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_Group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_Annual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Annaul" />

            <RadioButton
                android:id="@+id/radio_semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Semester" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_Spiner"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_number_gain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_obtained_marks"
            android:inputType="number"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_number_Total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_total_marks"
            android:inputType="number"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_Main"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/submit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_button"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/final_result"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_final"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_background"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/_40_40"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/adsBanner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</RelativeLayout>