<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Home">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/liner_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_select_your_education_system"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/liner_matric"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_liner"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cap" />

            <TextView
                android:id="@+id/button_matric"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/matric"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/liner_inter"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/main_liner"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cap" />

            <TextView
                android:id="@+id/button_inter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/inter"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/liner_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_layout"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/liner_bech"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_liner"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cap" />

            <TextView
                android:id="@+id/button_bechelors"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/bechelors"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/liner_masters"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/main_liner"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cap" />

            <TextView
                android:id="@+id/button_masters"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/masters"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/liner_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/adsBanner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</RelativeLayout>