<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TotalActivity">

    <LinearLayout
        android:id="@+id/liner_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/android_header" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/final_total"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/_40_40"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_final"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView

            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/final_result"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>